fixed the team photo overlap

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -100,11 +100,7 @@ main
   display: inline-block;
   padding: 20px;
 }
-.column1, .column2, .column3{
-  width: 25%;
-  float: left;
-  margin: 1%;
-}
+
 nav {
   /*background-color: #00A1F1 !important;*/
   font-size: 50px !important;
